--- a/resources/assets/scss/modules/navbar-search.scss
+++ b/resources/assets/scss/modules/navbar-search.scss
@@ -14,7 +14,7 @@
 
 	@include media-breakpoint-up(md) {
 		order: 2;
-		margin: 0 $spacer;
+		margin: 0 0 0 $spacer;
 		width: auto;
 	}
 
